<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fillViewport="true"
    android:orientation="vertical"
    tools:ignore="ContentDescription,HardcodedText">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <RelativeLayout
        android:id="@+id/viewHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="24dp"
        android:paddingTop="10dp"
        android:paddingEnd="24dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical">

            <TextView
                style="@style/MyTextView.Medium"
                android:text="Hi, I am"
                android:textColor="@color/text_orange" />

            <TextView
                style="@style/MyTextView.XLarge"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/titan_one"
                android:text="Sailesh Limbu"
                android:textColor="@color/dark_blue" />

            <TextView
                style="@style/MyTextView.Medium"
                android:layout_width="wrap_content"
                android:layout_marginTop="4dp"
                android:text="Android Developer"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnContactMe"
                style="@style/MyButton"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/drawable_outline_button"
                android:text="Contact Me"
                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/imgProfile"
            android:layout_width="100dp"
            android:layout_height="150dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:src="@drawable/profile" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/viewHeader"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:padding="12dp">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgBadge"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/drawable_circle"
                    android:padding="8dp"
                    android:src="@drawable/badge" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/imgBadge"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTextView.Medium"
                        android:text="8 Years Job"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/MyTextView.Small"
                        android:text="Experience"
                        android:textColor="@color/text_orange" />
                </LinearLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:id="@+id/imgProject"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:background="@drawable/drawable_circle"
                    android:padding="8dp"
                    android:src="@drawable/briefing" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="8dp"
                    android:layout_toEndOf="@id/imgProject"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MyTextView.Medium"
                        android:text="500+ Projects"
                        android:textColor="@color/dark_blue"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/MyTextView.Small"
                        android:text="Completed"
                        android:textColor="@color/text_orange" />
                </LinearLayout>
            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/viewHeader"
        android:layout_marginTop="30dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingStart="24dp"
        android:paddingTop="50dp"
        android:paddingBottom="24dp"
        android:paddingEnd="24dp">

        <TextView
            style="@style/MyTextView.Large"
            android:text="About Me"
            android:textStyle="bold" />

        <include layout="@layout/layout_divider" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/bio" />

        <TextView
            style="@style/MyTextView.Large"
            android:layout_marginTop="12dp"
            android:text="Language &amp; Tools"
            android:textStyle="bold" />

        <include layout="@layout/layout_divider" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/languages" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/web" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/web_services" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/databases" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/design" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/SDLC" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/tools" />

        <TextView
            style="@style/MyTextView.Medium"
            android:text="@string/platforms" />

        <TextView
            style="@style/MyTextView.Large"
            android:layout_marginTop="12dp"
            android:text="Education"
            android:textStyle="bold" />

        <include layout="@layout/layout_divider" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imgMIU"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/miu_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imgMIU"
                android:orientation="vertical">

                <TextView
                    style="@style/MyTextView.Medium"
                    android:text="Maharishi International University"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MyTextView.Small"
                    android:text="Master in Computer Science"
                    android:textColor="@color/gray" />

                <TextView
                    style="@style/MyTextView.Small"
                    android:text="(2022 - Present)"
                    android:textColor="@color/dark_orange" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <ImageView
                android:id="@+id/imgSoftwarica"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_softwarica" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/imgSoftwarica"
                android:orientation="vertical">

                <TextView
                    style="@style/MyTextView.Medium"
                    android:text="Softwarica College of IT &amp; e-Commerce"
                    android:textStyle="bold" />

                <TextView
                    style="@style/MyTextView.Small"
                    android:text="Bsc. Hons Degree"
                    android:textColor="@color/gray" />

                <TextView
                    style="@style/MyTextView.Small"
                    android:text="(2015 - 2019)"
                    android:textColor="@color/dark_orange" />
            </LinearLayout>
        </RelativeLayout>

    </LinearLayout>
    </RelativeLayout>
</ScrollView>